@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2009  Christian Heckendorf <heckendorfc@gmail.com>
+ *  Copyright (C) 2009-2010  Christian Heckendorf <heckendorfc@gmail.com>
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -15,6 +15,15 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#include "harpconfig.h"
+#include "defs.h"
+#include "insert.h"
+
+struct lconf listconf;
+struct iconf insertconf;
+struct dconf debugconf;
+
+extern struct option longopts[];
 
 static void argConfig(char *buffer){
 	char *setting=buffer;
@@ -113,6 +122,42 @@ static void insertConfig(char *buffer){
 	}
 }
 
+static void debugConfig(char *buffer){
+	char *setting=buffer;
+	int x=0,argfound=0;
+	while(*setting!='=' && *setting)setting++;
+	if(*setting && *(setting+1))argfound=1;
+	*(setting++)=0;
+
+	if(strcmp("logging",buffer)==0 && *setting=='y'){
+		debugconf.log=1;
+	}
+	else if(strcmp("directory",buffer)==0){
+		if(debugconf.dir==NULL || strcmp(debugconf.dir,setting)!=0){
+			if(debugconf.dir)
+				free(debugconf.dir);
+			debugconf.dir=strdup(setting);
+		}
+	}
+	else if(strcmp("playlog",buffer)==0 && *setting=='y' && debugconf.dir){
+		char tmp[256];
+		sprintf(tmp,"%s/player.log",debugconf.dir);
+		expand(tmp);
+		if(debugconf.playlog)fclose(debugconf.playlog);
+		debugconf.playlog=fopen(tmp,"w");
+	}
+	else if(strcmp("loglevel",buffer)==0 && *setting=='y'){
+		debugconf.level=(int)strtol(setting,NULL,10);
+		if(debugconf.level>0 && debugconf.dir){
+			char tmp[256];
+			sprintf(tmp,"%s/debug.log",debugconf.dir);
+			expand(tmp);
+			if(debugconf.msglog)fclose(debugconf.playlog);
+			debugconf.msglog=fopen(tmp,"w");
+		}
+	}
+}
+
 static void configInit(){
 	if(insertconf.format=malloc(sizeof(char*)))
 		*insertconf.format=NULL;
@@ -120,29 +165,18 @@ static void configInit(){
 		*insertconf.f_root=NULL;
 	insertconf.length=-1;
 	insertconf.second_cb=insertconf.first_cb=NULL;
+
+	debugconf.msglog=debugconf.playlog=debugconf.dir=NULL;
 }
 
-void setDefaultConfig(){
-	FILE *ffd;
+static void parseConfig(FILE *ffd){
 	char *buffer=malloc(255*sizeof(char));
-	char temp[250];
 	char *ptr=buffer;
 	int x=0;
 	void (*dest)(char *buffer) = NULL;
 
 	if(!buffer)return;
 
-	configInit();
-
-	strcpy(temp,"~/.harp/defaults.conf");
-	expand(temp);
-	if((ffd=fopen(temp,"r"))==NULL){
-		sprintf(temp,"%s/harp/defaults.conf",SHARE_PATH);
-		if((ffd=fopen(temp,"r"))==NULL){
-			free(buffer);
-			return;
-		}
-	}
 
 	while(fgets(buffer,255,ffd)){
 		if(*buffer=='['){ // New header
@@ -150,6 +184,7 @@ void setDefaultConfig(){
 				case 'a':dest=&argConfig;break;
 				case 'l':dest=&listConfig;break;
 				case 'i':dest=&insertConfig;break;
+				case 'd':dest=&debugConfig;break;
 				default:dest=NULL;
 			}
 			continue;
@@ -163,6 +198,26 @@ void setDefaultConfig(){
 			dest(buffer);
 		}
 	}
-	fclose(ffd);
 	free(buffer);
+}
+
+void setDefaultConfig(){
+	FILE *ffd;
+	char temp[250];
+
+	configInit();
+
+	sprintf(temp,"%s/harp/defaults.conf",SHARE_PATH);
+	if((ffd=fopen(temp,"r"))==NULL){
+		exit(1);
+	}
+	parseConfig(ffd);
+	fclose(ffd);
+	
+	strcpy(temp,"~/.harp/defaults.conf");
+	expand(temp);
+	if((ffd=fopen(temp,"r"))!=NULL){
+		parseConfig(ffd);
+		fclose(ffd);
+	}
 }
