@@ -50,4 +50,21 @@ usefilepath=no
 #format=/home/user/music/%r/%y-%a/%k-%t
 
 ## Default format. This should be last in the format list.
-format=*/%r/%a/%t
+#format=*/%r/%a/%t
+
+
+##############################
+# Special options for the list command
+[debug]
+# Enable or disable logging
+logging=no
+
+# Directory where the logs will be stored
+directory=~/.harp/
+
+# Log songs played
+playlog=yes
+
+# Maximum debug message level to log
+# 0 = No debug messages will be logged
+loglevel=0
