@@ -17,8 +17,8 @@ Edit information stored in the database.
 \fB\-l\fP,\fB --list=\fP{unique name | id}
 List information from the database. Use with no argument to display all entries.
 .TP
-\fB\-s\fP,\fB --shuffle\fP
-When combined with the play option, shuffle the selected songs.
+\fB\-s\fP,\fB --shuffle\fP{s | a | r}
+When combined with the play option, shuffle the selected songs. The given argument will determine whether songs, albums, or artists are shuffled.
 .TP
 \fB\-z\fP,\fB --zshuffle\fP
 When combined with the play option, shuffle the selected songs with statistical modifiers.
